service PredictorGrpc {
    rpc PlayerPrediction(PlayerInput) returns (PlayerPredictionOutput) {}
    rpc TeamPrediction(TeamInput) returns (TeamPredictionOutput) {}
    rpc ChampionshipPrediction(ChampionshipInput) returns (ChampionshipPredictionOutput) {}
}

message PlayerInput {
    required PlayerObj firstPlayer = 1;
    required PlayerObj secondPlayer = 2;
}

message PlayerObj {
    required string nickname = 1;
    required string team = 2;
}

message TeamInput {
    required string firstTeamAcronym = 1;
    required string secondTeamAcronym = 2;
}

message ChampionshipInput {
    required string name = 1;
}

message PlayerPredictionOutput {
    required PlayerObj player = 1;
}

message TeamPredictionOutput {
    required string name = 1;
}

message ChampionshipPredictionOutput {
    required string winnerName = 1;
}